apps/kanidm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
spec:
  selector:
    app: kanidm
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
